Fixed Desciplines page

--- a/Programmania/Views/Home/Disciplines.cshtml
+++ b/Programmania/Views/Home/Disciplines.cshtml
@@ -32,79 +32,112 @@
     
             <div class="desciplines">
                 
-                <a class="descipline" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
+                <a data-aos="fade-right" data-aos-duration="1000">
+                    <div class="descipline">
+                        <div class="subject">
+                            <p class=" subject-text">Data Types</p>
+                        </div>
+                        <div class="subject__img">
+                            <img src="~/images/pexels-scott-webb-1048033.jpg" />
+                        </div>
+                        <div class="diagramm__body">
+                            <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
+                            <div class="lesson-count">
+                                <p class="lesson-count__text">Lesson count 1 / 20</p>
+                            </div>
                         </div>
                     </div>
+                    
                 </a>
     
-                <a class="descipline" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
+                 <a data-aos="fade-right" data-aos-duration="1000">
+                    <div class="descipline">
+                        <div class="subject">
+                            <p class=" subject-text">Data Types</p>
+                        </div>
+                        <div class="subject__img">
+                            <img src="~/images/pexels-scott-webb-1048033.jpg" />
+                        </div>
+                        <div class="diagramm__body">
+                            <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
+                            <div class="lesson-count">
+                                <p class="lesson-count__text">Lesson count 1 / 20</p>
+                            </div>
                         </div>
                     </div>
+                    
                 </a>
-    
-                <a class="descipline" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
+
+                 <a data-aos="fade-right" data-aos-duration="1000">
+                    <div class="descipline">
+                        <div class="subject">
+                            <p class=" subject-text">Data Types</p>
+                        </div>
+                        <div class="subject__img">
+                            <img src="~/images/pexels-scott-webb-1048033.jpg" />
+                        </div>
+                        <div class="diagramm__body">
+                            <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
+                            <div class="lesson-count">
+                                <p class="lesson-count__text">Lesson count 1 / 20</p>
+                            </div>
                         </div>
                     </div>
+                    
                 </a>
-    
-                <a class="descipline" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
+
+                 <a data-aos="fade-right" data-aos-duration="1000">
+                    <div class="descipline">
+                        <div class="subject">
+                            <p class=" subject-text">Data Types</p>
+                        </div>
+                        <div class="subject__img">
+                            <img src="~/images/pexels-scott-webb-1048033.jpg" />
+                        </div>
+                        <div class="diagramm__body">
+                            <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
+                            <div class="lesson-count">
+                                <p class="lesson-count__text">Lesson count 1 / 20</p>
+                            </div>
                         </div>
                     </div>
+                    
                 </a>
-    
-                <a class="descipline" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
+
+                 <a data-aos="fade-right" data-aos-duration="1000">
+                    <div class="descipline">
+                        <div class="subject">
+                            <p class=" subject-text">Data Types</p>
+                        </div>
+                        <div class="subject__img">
+                            <img src="~/images/pexels-scott-webb-1048033.jpg" />
+                        </div>
+                        <div class="diagramm__body">
+                            <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
+                            <div class="lesson-count">
+                                <p class="lesson-count__text">Lesson count 1 / 20</p>
+                            </div>
                         </div>
                     </div>
+                    
+                </a>
+
+                 <a data-aos="fade-right" data-aos-duration="1000">
+                    <div class="descipline">
+                        <div class="subject">
+                            <p class=" subject-text">Data Types</p>
+                        </div>
+                        <div class="subject__img">
+                            <img src="~/images/pexels-scott-webb-1048033.jpg" />
+                        </div>
+                        <div class="diagramm__body">
+                            <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
+                            <div class="lesson-count">
+                                <p class="lesson-count__text">Lesson count 1 / 20</p>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </a>
             </dvi>
         </div>
