added view for 401 error added middleware for errors in Startup added image color analyzer (not implemented)

--- a/Programmania/Views/Home/Courses.cshtml
+++ b/Programmania/Views/Home/Courses.cshtml
@@ -1,9 +1,10 @@
 <!DOCTYPE/>
+
 <html>
 <head>
     <title>Courses</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
     <link rel="stylesheet" href="~/css/Courses.css" />
@@ -63,7 +64,7 @@
                                 <div class="coursesList__item__hover">
                                     <div class="coursesList__item__hover__body">
                                         <div class="roundedPb">
-                                            
+
                                         </div>
                                     </div>
                                 </div>
@@ -90,7 +91,7 @@
                                 <div class="coursesList__item__hover">
                                     <div class="coursesList__item__hover__body">
                                         <div class="roundedPb">
-                                            
+
                                         </div>
                                     </div>
                                 </div>
@@ -117,7 +118,7 @@
                                 <div class="coursesList__item__hover">
                                     <div class="coursesList__item__hover__body">
                                         <div class="roundedPb">
-                                            
+
                                         </div>
                                     </div>
                                 </div>
@@ -148,5 +149,6 @@
 
     <script type="text/javascript" src="~/js/util/burger.js"></script>
     <script type="text/javascript" src="~/js/util/createPB.js"></script>
+    <script src="~/js/loading-bar.min.js"></script>
 </body>
 </html>																																					
