--- a/Programmania/Views/Home/Performance.cshtml
+++ b/Programmania/Views/Home/Performance.cshtml
@@ -52,6 +52,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="~/js/elements/rewards.js"></script>
     <script type="text/javascript" src="~/js/performance.js"></script>
 </body>
 </html>
