--- a/Programmania/Views/Home/Courses.cshtml
+++ b/Programmania/Views/Home/Courses.cshtml
@@ -1,10 +1,12 @@
 <!DOCTYPE/>
+@model Programmania.ViewModels.UserCourseVM[];
+@using Programmania.HtmlHelpers
 
 <html>
 <head>
     <title>Courses</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
     <link rel="stylesheet" href="~/css/Courses.css" />
@@ -55,99 +57,32 @@
     </header>
 
     <main>
-        <div class="content">
-            <div class="main">
-                <div class="card mb-3">
-                    <div class="coursesList">
-                        <a href="#">
-                            <div class="coursesList__item">
-                                <div class="coursesList__item__hover">
-                                    <div class="coursesList__item__hover__body">
-                                        <div class="roundedPb">
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="coursesList__item__image">
-                                    <img src="../Images/JSLogo.png" alt="">
-                                </div>
+        <div class="header-text">
+            <h3>Courses</h3>
+        </div>
 
         <div class="content">
             <div class="courses" data-aos="fade-left" data-aos-duration="1500">
-
-                                <div class="coursesList__item__footer">
-                                    <h3>Leksions count: 23</h3>
-                                    <h3>Progress: 12%</h3>
-                                    <h3>Completed leksion: 5/23</h3>
-                                    <h3>People opened this course: 130</h3>
-                                    <h3>Earn XP: 3000</h3>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a href="#">
-                            <div class="coursesList__item">
-                                <div class="coursesList__item__hover">
-                                    <div class="coursesList__item__hover__body">
-                                        <div class="roundedPb">
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="coursesList__item__image">
-                                    <img src="../Images/JSLogo.png" alt="">
-                                </div>
-
-                                <div class="coursesList__item__body">
-                                    <h3>JavaScript course</h3>
-                                </div>
-
-                                <div class="coursesList__item__footer">
-                                    <h3>Leksions count: 23</h3>
-                                    <h3>Progress: 12%</h3>
-                                    <h3>Completed leksion: 5/23</h3>
-                                    <h3>People opened this course: 130</h3>
-                                    <h3>Earn XP: 3000</h3>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a href="#">
-                            <div class="coursesList__item">
-                                <div class="coursesList__item__hover">
-                                    <div class="coursesList__item__hover__body">
-                                        <div class="roundedPb">
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="coursesList__item__image">
-                                    <img src="../Images/JSLogo.png" alt="">
-                                </div>
-
-                                <div class="coursesList__item__body">
-                                    <h3>JavaScript course</h3>
-                                </div>
-
-                                <div class="coursesList__item__footer">
-                                    <h3>Leksions count: 23</h3>
-                                    <h3>Progress: 12%</h3>
-                                    <h3>Completed leksion: 5/23</h3>
-                                    <h3>People opened this course: 130</h3>
-                                    <h3>Earn XP: 3000</h3>
-                                </div>
-                            </div>
-                        </a>
-
-                    </div>
-                </div>
+                @foreach (var course in Model)
+                {
+                    if (course.IsSelected)
+                    {
+                        @Html.CreateUserCourse(course);
+                    }
+                    else
+                    {
+                       @Html.CreateCourse(course);
+                    }
+                }
             </div>
-
         </div>
     </main>
 
     <script type="text/javascript" src="~/js/util/burger.js"></script>
-    <script type="text/javascript" src="~/js/util/createPB.js"></script>
-    <script src="~/js/loading-bar.min.js"></script>
+    <script type="text/javascript" src="~/js/util/imageAnylizer.js"></script>
+    <script type="text/javascript" src="~/js/courses.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>																																					
