--- a/Programmania/Views/Course/Courses.cshtml
+++ b/Programmania/Views/Course/Courses.cshtml
@@ -1,166 +1,91 @@
 ﻿<!DOCTYPE/>
+@model Programmania.ViewModels.UserCourseVM[];
+@using Programmania.HtmlHelpers
+
 <html>
 <head>
- <title>Courses</title>
- <meta charset="utf-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1" />
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
- <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
- <link rel="stylesheet" href="~/css/Courses.css" />
- <link rel="stylesheet" href="~/css/loading-bar.min.css" />
- <script src="~/js/loading-bar.min.js"></script>
- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <title>Courses</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
+    <link rel="stylesheet" href="~/css/Courses.css" />
+
+    <link rel="stylesheet" href="~/css/loading-bar.min.css" />
+    <script src="~/js/loading-bar.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
+
 <body>
 
- <header class="header">
-  <div class="header-container">
-   <div class="container__text">Programmania</div>
-   <div class="header__burger">
-    <span></span>
-   </div>
-   <div class="container-menu">
-    <nav class="header__menu">
-     <ul class="header__list">
-      <li>
-       <a href="Main" class="header__link">Main</a>
-      </li>
-      <li>
-       <a href="Courses" class="header__link">Courses</a>
-      </li>
-      <li>
-       <a href="News" class="header__link">News</a>
-      </li>
-      <li>
-       <a href="Challenges" class="header__link">Challenges</a>
-      </li>
-      <li>
-       <a href="Profile" class="header__link">Profile</a>
-      </li>
-     </ul>
-    </nav>
-   </div>
-  </div>
- </header>
- <main>
-  <div class="header-text">
-   <h3>Courses</h3>
-  </div>
-  <div class="content">
-   <div class="courses" data-aos="fade-left" data-aos-duration="1500">
-    <a>
-     <div class="course ">
-      <div class="course__image lifted">
-       <img src="~/images/csharpCourse.jpg" />
-      </div>
-      <div class="course-body">
-       <div class="course-info">
-        <h5>C#</h5>
-        <p>Lessons Count: 100/155</p>
-       </div>
-       <div class="ldBar label-center"
-            data-preset="circle"
-            data-value="64"
-            data-transition-in="1000"
-            style="width: 50%; height: 50%;">
-       </div>
-      </div>
-     </div>
-    </a>
-    <a>
-     <div class="course ">
-      <div class="course__image lifted">
-       <img src="~/images/rubyCourse.jpg" />
-      </div>
-      <div class="course-body">
-       <div class="course-info">
-        <h5>Ruby</h5>
-        <p>Lessons Count: 86/144</p>
-       </div>
-       <div class="ldBar label-center"
-            data-preset="circle"
-            data-value="59"
-            data-transition-in="1000"
-            style="width: 50%; height: 50%;">
-       </div>
-      </div>
-     </div>
-    </a>
-    <a>
-     <div class="course ">
-      <div class="course__image lifted">
-       <img src="~/images/pythonCourse.png" />
-      </div>
-      <div class="course-body">
-       <div class="course-info">
-        <h5>Python</h5>
-        <p>Lessons Count: 55/155</p>
-       </div>
-       <div class="ldBar label-center"
-            data-preset="circle"
-            data-value="32"
-            data-transition-in="1000"
-            style="width: 50%; height: 50%;">
-       </div>
-      </div>
-     </div>
-    </a>
-    <a>
-     <div class="course">
-      <div class="course__image lifted dark-image">
-       <img src="~/images/cplusplusCourse.jpg" />
-      </div>
-      <div class="course-body">
-       <div class="course-info">
-        <h5>C++</h5>
-        <p>Lessons Count: 0/200</p>
-       </div>
-       <div class="course-info__text">
-        C++ is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language, or "C with Classes".
-       </div>
-      </div>
-     </div>
-    </a>
-    <a>
-     <div class="course">
-      <div class="course__image lifted dark-image">
-       <img src="~/images/javaCourse.png" />
-      </div>
-      <div class="course-body">
-       <div class="course-info">
-        <h5>Java</h5>
-        <p>Lessons Count: 0/122</p>
-       </div>
-       <div class="course-info__text">
-        Java is the #1 programming language and development platform. It reduces costs, shortens development timeframes, drives innovation, and improves application ...
-       </div>
-      </div>
-     </div>
-    </a>
-    <a>
-     <div class="course">
-      <div class="course__image lifted dark-image">
-       <img src="~/images/phpCourse.png" />
-      </div>
-      <div class="course-body">
-       <div class="course-info">
-        <h5>PHP</h5>
-        <p>Lessons Count: 0/65</p>
-       </div>
-       <div class="course-info__text">
-        PHP is a popular general-purpose scripting language that is especially suited to web development. Fast, flexible and pragmatic, PHP powers everything from ...
-       </div>
-      </div>
-     </div>
-    </a>
-   </div>
-  </div>
- </main>
- <script type="text/javascript" src="~/js/util/burger.js"></script>
- <script>
+    <header class="header">
+        <div class="header-container">
+            <div class="container__text">Programmania</div>
+            <div class="header__burger">
+                <span></span>
+            </div>
+            <div class="container-menu">
+                <nav class="header__menu">
+                    <ul class="header__list">
+                        <li>
+                            <a href="Main" class="header__link">Main</a>
+                        </li>
+
+                        <li>
+                            <a href="Courses" class="header__link">Courses</a>
+                        </li>
+
+                        <li>
+                            <a href="News" class="header__link">News</a>
+                        </li>
+
+                        <li>
+                            <a href="Challenges" class="header__link">Challenges</a>
+                        </li>
+
+                        <li>
+                            <a href="Profile" class="header__link">Profile</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="header-text">
+            <h3>Courses</h3>
+        </div>
+
+        <div class="content">
+            <div class="courses" data-aos="fade-left" data-aos-duration="1500">
+                @if (Model != null)
+                {
+                    @foreach (Programmania.ViewModels.UserCourseVM course in Model)
+                    {
+                        if (course.IsSelected)
+                        {
+                            @Html.CreateUserCourse(course);
+                        }
+                        else
+                        {
+                            @Html.CreateCourse(course);
+                        }
+                    }
+                }
+            </div>
+        </div>
+    </main>
+
+    <script type="text/javascript" src="~/js/util/burger.js"></script>
+    <script type="text/javascript" src="~/js/util/imageAnylizer.js"></script>
+    <script type="text/javascript" src="~/js/courses.js"></script>
+    <script>
         AOS.init();
- </script>
+    </script>
 </body>
-</html>			
+</html>																																					
