--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -36,23 +36,23 @@
                 <nav class="header__menu">
                     <ul class="header__list">
                         <li>
-                            <a href="Main" class="header__link">Main</a>
+                            <a id="mainRef" href="Main" class="header__link">Main</a>
                         </li>
 
                         <li>
-                            <a href="Courses" class="header__link">Courses</a>
+                            <a id="coursesRef" href="Courses" class="header__link">Courses</a>
                         </li>
 
                         <li>
-                            <a href="News" class="header__link">News</a>
+                            <a id="newsRef" href="News" class="header__link">News</a>
                         </li>
 
                         <li>
-                            <a href="Challenges" class="header__link">Challenges</a>
+                            <a id="challengesRef" href="Challenges" class="header__link">Challenges</a>
                         </li>
 
                         <li>
-                            <a href="Profile" class="header__link">Profile</a>
+                            <a id="profileRef" href="Profile" class="header__link">Profile</a>
                         </li>
                     </ul>
                 </nav>
@@ -349,6 +349,8 @@
     <script type="text/javascript" src="~/js/denyBtnClick.js"></script>
     <script type="text/javascript" src="~/js/util/scrollAnimation.js"></script>
     <script type="text/javascript" src="~/js/denyBtnClick.js"></script>
+    <script type="text/javascript" src="~/js/util/cookie.js"></script>
+    <script type="text/javascript" src="~/js/main.js"></script>
     <script>
         AOS.init();
     </script>
