1. Fixed scrolling in challenges page 2. Fixed images in main page

--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -69,8 +69,8 @@
 
             <div class="coursesContainer">
                 <div class="currentCourse" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="currentCourse__image ">
-                        <img src="~/images/cSharpLogo.png" />
+                    <div class="currentCourse__image">
+
                     </div>
 
                     <div class="currentCourse-content ">
@@ -101,26 +101,22 @@
 
                 <div class="courses row" data-aos="fade-left" data-aos-duration="1000">
                     <a class="col-md-6">
-                        <div class="courses__course">
-                            <img src="~/images/phpCourse.png" />
+                        <div class="courses__course" style="background-image: url(../images/cppCourse.png)">
                         </div>
                     </a>
 
                     <a class="col-md-6">
-                        <div class="courses__course">
-                            <img src="~/images/javaCourse.png" />
+                        <div class="courses__course" style="background-image: url(../images/rubyCourse.png)">
                         </div>
                     </a>
 
                     <a class="col-md-6">
-                        <div class="courses__course">
-                            <img src="~/images/pythonCourse.png" />
+                        <div class="courses__course" style="background-image: url(../images/javaCourse.jpg)">
                         </div>
                     </a>
 
                     <a class="col-md-6">
-                        <div class="courses__course">
-                            <img src="~/images/cplusplusCourse.jpg" />
+                        <div class="courses__course" style="background-image: url(../images/phpCourse.jpg)">
                         </div>
                     </a>
                 </div>
@@ -244,7 +240,7 @@
                 <a>
                     <div class="challenges-item challenges-item_accept">
                         <div class="challenges-item__image">
-                            <img src="~/images/RubyCourse.jpg" />
+                            <img src="~/images/rubyCourse.png" />
                         </div>
 
                         <div class="challenges-item-content">
@@ -273,7 +269,7 @@
                 <a>
                     <div class="challenges-item challenges-item_create">
                         <div class="challenges-item__image">
-                            <img src="~/images/cplusplusCourse.jpg" />
+                            <img src="~/images/cppCourse.png" />
                         </div>
 
                         <div class="challenges-item-content">
