--- a/Programmania/wwwroot/statusPages/css/404.css
+++ b/Programmania/wwwroot/statusPages/css/404.css
@@ -7,14 +7,10 @@ p {
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.error__description {
-    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 700px;
 }
 
 .error__msg {
@@ -34,7 +30,6 @@ p {
 }
 
 .error__img {
-    float: right;
     max-width: 600px;
 }
 
@@ -43,20 +38,21 @@ p {
         height: auto;
     }
 
-/*@media only screen and (max-width: 1500px){
+@media only screen and (max-width: 1000px) {
     .container {
-        display: block;
+        flex-direction: column-reverse;
+        height: 100%;
     }
-    .error__description {
-        clear: both;
-        margin: 0 auto;
-        text-align: center;
-        width: 100%;
+
+    .error__img{
+        margin: 10px;
     }
-    .error__img {
-        margin: 0 auto;
-        clear: both;
-        text-align: center;
-        max-width: 100%;
+
+    .error__msg {
+        font-size: 30px;
     }
-}*/
+
+    .error__msg_small {
+        font-size: 20px;
+    }
+}
