--- a/Programmania/Views/Home/Lessons.cshtml
+++ b/Programmania/Views/Home/Lessons.cshtml
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="~/css/Lessons.css" />
 
+    <link rel="stylesheet" href="~/css/highlight styles/default.min.css" />
+    <script src="~/js/highlight.min.js"></script>
+
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
@@ -17,7 +21,7 @@
                 <div class="header-back" data-aos="fade-right" data-aos-duration="1000">
                 </div>
             </a>
-            <h3 class="header__text" data-aos="fade-left" data-aos-duration="1000">Programmania</h3>
+            <h3 class="header__text text-bold" data-aos="fade-left" data-aos-duration="1000">Programmania</h3>
         </div>
     </header>
 
@@ -31,7 +35,7 @@
                 <div class="burger-content">
                     <a href="#">
                         <div class="burger-content-elem burger-content-elem_read">
-                            <h3 class="burger-content-elem__text">
+                            <h3 class="burger-content-elem__text text-normal">
                                 #1 What is garbage collector?
                             </h3>
                         </div>
@@ -39,7 +43,7 @@
 
                     <a href="#">
                         <div class="burger-content-elem burger-content-elem_read">
-                            <h3 class="burger-content-elem__text">
+                            <h3 class="burger-content-elem__text text-normal">
                                 #2 IDisposable interface
                             </h3>
                         </div>
@@ -47,7 +51,7 @@
 
                     <a href="#">
                         <div class="burger-content-elem burger-content-elem_unread">
-                            <h3 class="burger-content-elem__text">
+                            <h3 class="burger-content-elem__text text-normal">
                                 #3 Something interesting
                             </h3>
                         </div>
@@ -55,7 +59,7 @@
 
                     <a href="#">
                         <div class="burger-content-elem burger-content-elem_unread">
-                            <h3 class="burger-content-elem__text">
+                            <h3 class="burger-content-elem__text text-normal">
                                 #4 Something interesting
                             </h3>
                         </div>
@@ -63,7 +67,7 @@
 
                     <a href="#">
                         <div class="burger-content-elem burger-content-elem_unread">
-                            <h3 class="burger-content-elem__text">
+                            <h3 class="burger-content-elem__text text-normal">
                                 #5 Something interesting
                             </h3>
                         </div>
@@ -73,42 +77,57 @@
             </div>
 
             <div class="content">
-                <h3 class="content__title" data-aos="fade-left" data-aos-duration="1000">Lesson N2. IDisposable</h3>
-                <p class="content__text" data-aos="fade-right" data-data-aos-duration="1000">Lorem ipsum...</p>
+                <h3 class="content__title text-normal" data-aos="fade-left" data-aos-duration="1000">Lesson N2. IDisposable</h3>
+                <p class="content__text text-thin" data-aos="fade-right" data-data-aos-duration="1000">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+                <pre>
+                    <code class="language-c# code">
+namespace HelloWorld
+{
+    class Hello {         
+        static void Main(string[] args)
+        {
+            System.Console.WriteLine("Hello World!");
+        }
+    }
+}
+                    </code>
+                </pre>
+
+                <p class="content__text text-thin" data-aos="fade-right" data-data-aos-duration="1000">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 
                 <div class="content-tests">
                     <div class="content-tests-test" data-aos="fade-right" data-aos-duration="1000">
-                        <h3 class="content-tests__question">Some question...</h3>
+                        <h3 class="content-tests__question text-normal">Some question...</h3>
                         <label class="rad-label">
                             <input type="radio" class="rad-input" name="rad" />
                             <div class="rad-design"></div>
-                            <div class="rad-text">Answer 1</div>
+                            <div class="rad-text text-light" >Answer 1</div>
                         </label>
 
                         <label class="rad-label">
                             <input type="radio" class="rad-input" name="rad" />
                             <div class="rad-design"></div>
-                            <div class="rad-text">Answer 2</div>
+                            <div class="rad-text text-light">Answer 2</div>
                         </label>
 
                         <label class="rad-label">
                             <input type="radio" class="rad-input" name="rad" />
                             <div class="rad-design"></div>
-                            <div class="rad-text">Answer 3</div>
+                            <div class="rad-text text-light">Answer 3</div>
                         </label>
 
                         <label class="rad-label">
                             <input type="radio" class="rad-input" name="rad" />
                             <div class="rad-design"></div>
-                            <div class="rad-text">Answer 4</div>
+                            <div class="rad-text text-light">Answer 4</div>
                         </label>
                     </div>
-
                 </div>
 
                 <button class="button button-next">
                     <span>
-                        Next
+                        <p class="text-normal">Next</p>
                     </span>
                 </button>
             </div>
@@ -117,6 +136,10 @@
 
     <script>
         AOS.init();
+    </script>
+
+    <script>
+        hljs.highlightAll();
     </script>
 </body>
 </html>
