--- a/Programmania/Views/Home/Disciplines.cshtml
+++ b/Programmania/Views/Home/Disciplines.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Programmania.HtmlHelpers;
+@model IEnumerable<Programmania.ViewModels.DisciplineVM>;
 
 <html>
 <head>
@@ -10,7 +11,7 @@
     <link rel="stylesheet" href="~/css/Disciplines.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
@@ -24,119 +25,26 @@
         </a>
 
         <div class="header-text__content">
-            <h3>C# Course</h3>
+            <h3></h3>
         </div>
     </div>
 
     <div class="course__img" data-aos="fade-left" data-aos-duration="1000">
-        <img src="~/images/caio.jpg">
+        <img>
     </div>
 
     <div class="content">
         <div class="desciplines">
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
+            @if (Model != null)
+            {
+                @foreach (var discipline in Model)
+                {
+                    @if (discipline.IsPassed)
+                        Html.CreatePassedDiscipline(discipline);
+                    else
+                        Html.CreateDiscipline(discipline);
+                }
+            }
         </div>
     </div>
 
