--- a/Programmania/wwwroot/css/Disciplines.css
+++ b/Programmania/wwwroot/css/Disciplines.css
@@ -74,6 +74,10 @@ body {
     transition: all 0.5s ease 0s;
 }
 
+.dark-image {
+    filter: brightness(50%);
+}
+
 .descipline:hover{
     background-color: #f7f7f7;
     transform: scale(1.1);
