--- a/Programmania/Views/Course/Disciplines.cshtml
+++ b/Programmania/Views/Course/Disciplines.cshtml
@@ -1,149 +1,53 @@
 ﻿@using Programmania.HtmlHelpers;
+@model IEnumerable<Programmania.ViewModels.UserDisciplineVM>;
 
-<html>
-<head>
-    <title>Disciplines</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="~/js/loading-bar.min.js"></script>
-    <link rel="stylesheet" href="~/css/loading-bar.min.css" />
-    <link rel="stylesheet" href="~/css/Disciplines.css" />
+<ht ml>
+ <head>
+  <title>Disciplines</title>
+  <met a charset="utf-8" />
+  <met a name="viewport" content="width=device-width, initial-scale=1" />
+  <sc ript src="~/js/loading-bar.min.js"></sc>
+  <li nk rel="stylesheet" href="~/css/loading-bar.min.css" />
+  <li nk rel="stylesheet" href="~/css/Disciplines.css" />
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-</head>
+  <sc ript src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></sc>
 
-<body>
-    <div class="header-text">
-        <a href="Courses">
-            <div class="back">
+  <li nk href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+   <sc ript src="https://unpkg.com/aos@2.3.1/dist/aos.js"></sc>
+ </head>
 
-            </div>
-        </a>
+ <body>
+  <div class="header-text">
+   <a href="Courses">
+    <div class="back">
 
-        <div class="header-text__content">
-            <h3>C# Course</h3>
-        </div>
     </div>
+   </a>
 
-    <div class="course__img" data-aos="fade-left" data-aos-duration="1000">
-        <img src="~/images/caio.jpg">
-    </div>
+   <div class="header-text__content">
+    <h3>C# Course</h3>
+   </div>
+  </div>
 
-    <div class="content">
-        <div class="desciplines">
+  <div class="course__img" data-aos="fade-left" data-aos-duration="1000">
+   <img>
+  </div>
 
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
+  <div class="content">
+   <div class="desciplines">
 
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
+    @foreach (var discipline in Model)
+    {
+     Html.CreateDiscipline(discipline);
+    }
 
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
+   </div>
+  </div>
 
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
+  <sc ript>
+   AOS.init();
+  </sc>
 
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a data-aos="fade-right" data-aos-duration="1000">
-                <div class="descipline">
-                    <div class="subject">
-                        <p class=" subject-text">Data Types</p>
-                    </div>
-                    <div class="subject__img">
-                        <img src="~/images/pexels-scott-webb-1048033.jpg" />
-                    </div>
-                    <div class="diagramm__body">
-                        <div class='ldBar label-center' data-preset='circle' data-value='25' data-transition-in='1000' style='width: 50%; height: 50%;'></div>
-                        <div class="lesson-count">
-                            <p class="lesson-count__text">Lesson count 1 / 20</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-        </div>
-    </div>
-
-    <script>
-        AOS.init();
-    </script>
-
-    <script type="text/javascript" src="~/js/disciplines.js"></script>
-</body>
-</html>
+  <sc ript type="text/javascript" src="~/js/disciplines.js"></sc>
+ </body>
+ </html>
